--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -22,9 +22,6 @@
 		<div class="layui-header header">
 			<div class="layui-main">
 				<a href="#" class="logo">订单管理系统</a>
-				<!-- 显示/隐藏菜单 -->
-				<!--<a href="javascript:;" class="iconfont hideMenu icon-menu1"></a>-->
-			    <!-- 天气信息 -->
 			    <div class="weather" pc="pc">
 					<div id="tp-weather-widget"></div>
 					<script>(function(T,h,i,n,k,P,a,g,e){g=function(){P=h.createElement(i);a=h.getElementsByTagName(i)[0];P.src=k;P.charset="utf-8";P.async=1;a.parentNode.insertBefore(P,a)};T["ThinkPageWeatherWidgetObject"]=n;T[n]||(T[n]=function(){(T[n].q=T[n].q||[]).push(arguments)});T[n].l=+new Date();if(T.attachEvent){T.attachEvent("onload",g)}else{T.addEventListener("load",g,false)}}(window,document,"script","tpwidget","//widget.seniverse.com/widget/chameleon.js"))</script>
@@ -76,7 +73,7 @@
 		<div class="layui-side layui-bg-black">
 			<div class="user-photo">
 				<a class="img" title="系统头像" ><img src="images/face.jpg" /></a>
-				<p><span class="userName" id="spanUserName"></span>, 欢迎登录!</p>
+				<p><span class="userName" id="spanUserName"></span>，欢迎登录！</p>
 			</div>
 			<div class="navBar layui-side-scroll"></div>
 		</div>
@@ -95,7 +92,7 @@
 		</div>
 		<!-- 底部 -->
 		<div class="layui-footer footer">
-			<p>copyright @2018 天津七一二通信广播股份有限公司：<a href="http://114.115.217.241/hbweb" target="_blank">连接地址</a>
+			<p>copyright @2019 刘凌宇&nbsp;&nbsp;微信联系：<a href="javascript:void(0);">lly199872</a>
 			</p>
 		</div>
 	</div>
